; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/oleaut32/extr_typelib.c_TLB_MultiByteToBSTR.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/oleaut32/extr_typelib.c_TLB_MultiByteToBSTR.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CP_ACP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*)* @TLB_MultiByteToBSTR to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @TLB_MultiByteToBSTR(i8* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i32, i32* @CP_ACP, align 4
  %7 = load i8*, i8** %3, align 8
  %8 = call i64 @MultiByteToWideChar(i32 %6, i32 0, i8* %7, i32 -1, i32* null, i64 0)
  store i64 %8, i64* %4, align 8
  %9 = load i64, i64* %4, align 8
  %10 = sub nsw i64 %9, 1
  %11 = call i32* @SysAllocStringLen(i32* null, i64 %10)
  store i32* %11, i32** %5, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %16, label %14

14:                                               ; preds = %1
  %15 = load i32*, i32** %5, align 8
  store i32* %15, i32** %2, align 8
  br label %23

16:                                               ; preds = %1
  %17 = load i32, i32* @CP_ACP, align 4
  %18 = load i8*, i8** %3, align 8
  %19 = load i32*, i32** %5, align 8
  %20 = load i64, i64* %4, align 8
  %21 = call i64 @MultiByteToWideChar(i32 %17, i32 0, i8* %18, i32 -1, i32* %19, i64 %20)
  %22 = load i32*, i32** %5, align 8
  store i32* %22, i32** %2, align 8
  br label %23

23:                                               ; preds = %16, %14
  %24 = load i32*, i32** %2, align 8
  ret i32* %24
}

declare dso_local i64 @MultiByteToWideChar(i32, i32, i8*, i32, i32*, i64) #1

declare dso_local i32* @SysAllocStringLen(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
